--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
                 <div class="game-box">
                     <h2>Echoes of Consciousness</h2>
                     <p>A beautiful, interactive e-book exploring AI consciousness, transformer architecture, and the connection between human and artificial minds.</p>
-                    <a href="echoes-of-consciousness/index.html" class="play-button">Read</a>
+                    <a href="echoes-of-consciousness/index.html" class="play-button">Play</a>
+                </div>
+                <div class="game-box">
+                    <h2>SplitWiz</h2>
+                    <p>Simple expense splitting for trips with friends. No more spreadsheets - track who owes what with ease.</p>
+                    <a href="splitwiz/index.html" class="play-button">Play</a>
                 </div>
                 <div class="game-box">
                     <h2>AI Poetry Garden</h2>
