--- a/splitwiz/index.html
+++ b/splitwiz/index.html
@@ -16,6 +16,7 @@
                 <h1>SplitWiz</h1>
                 <p>Simple expense splitting for trips with friends</p>
                 <button id="google-login-btn" class="btn btn-primary">
+                    <img src="https://supabase.com/dashboard/img/icons/google-icon.svg" alt="Google" style="width: 18px; height: 18px; margin-right: 8px;">
                     Sign in with Google
                 </button>
             </div>
@@ -166,6 +167,38 @@
                 <div class="modal-actions">
                     <button type="button" class="btn btn-secondary" onclick="closeModal('manage-participants-modal')">Close</button>
                 </div>
+            </div>
+        </div>
+
+        <!-- Edit Expense Modal -->
+        <div id="edit-expense-modal" class="modal">
+            <div class="modal-content">
+                <h3>Edit Expense</h3>
+                <form id="edit-expense-form">
+                    <input type="hidden" id="edit-expense-id">
+                    <div class="form-group">
+                        <label for="edit-expense-description">Description</label>
+                        <input type="text" id="edit-expense-description" required placeholder="Dinner at restaurant">
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-expense-amount">Amount</label>
+                        <input type="number" id="edit-expense-amount" step="0.01" min="0.01" required placeholder="50.00">
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-expense-date">Date</label>
+                        <input type="date" id="edit-expense-date" required>
+                    </div>
+                    <div class="form-group">
+                        <label>Split Between</label>
+                        <div id="edit-expense-participants" class="participant-checkboxes">
+                            <!-- Participant checkboxes will be inserted here -->
+                        </div>
+                    </div>
+                    <div class="modal-actions">
+                        <button type="button" class="btn btn-secondary" onclick="closeModal('edit-expense-modal')">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
+                </form>
             </div>
         </div>
 
