--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <section id="about" class="about-section">
             <h2 class="section-header">About</h2>
-            <p>I'm an engineer, founder, and CTO. This is my playground for browser-based AI experiments. Everything runs client-side in your browser.</p>
+            <p>I'm an engineer, founder, and CTO. This is my playground of projects with and about AI.</p>
         </section>
 
         <section id="ai-apps">
