--- a/index.html
+++ b/index.html
@@ -29,182 +29,182 @@
                 <div class="game-box">
                     <h2>Echoes of Consciousness</h2>
                     <p>A beautiful, interactive e-book exploring AI consciousness, transformer architecture, and the connection between human and artificial minds.</p>
-                    <a href="echoes-of-consciousness/index.html" class="play-button">Play</a>
+                    <a href="echoes-of-consciousness/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>SplitWiz</h2>
                     <p>Simple expense splitting for trips with friends. No more spreadsheets - track who owes what with ease.</p>
-                    <a href="splitwiz/index.html" class="play-button">Play</a>
+                    <a href="splitwiz/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>AI Poetry Garden</h2>
                     <p>Plant word seeds and watch AI-generated poetry bloom organically with animated visualizations. Harvest your favorite verses!</p>
-                    <a href="poetry-garden/index.html" class="play-button">Play</a>
+                    <a href="poetry-garden/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>AI Music Loop</h2>
                     <p>Craft your own melodies on a grid and let an AI generate creative variations. Explore interactive music creation!</p>
-                    <a href="music_loop_generator/index.html" class="play-button">Play</a>
+                    <a href="music_loop_generator/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>AI Wordle</h2>
                     <p>Guess AI-related terms and learn about key concepts in this engaging word puzzle game.</p>
-                    <a href="wordle/index.html" class="play-button">Play</a>
+                    <a href="wordle/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Python Blocks</h2>
                     <p>Drag, drop, and decode in this Python programming puzzle, where you'll piece together code blocks to solve challenges.</p>
-                    <a href="python-blocks/index.html" class="play-button">Play</a>
+                    <a href="python-blocks/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Flappy Loss</h2>
                     <p>Guide the AI bird through obstacles along the loss curve to achieve the highest score!</p>
-                    <a href="flappy/index.html" class="play-button">Play</a>
+                    <a href="flappy/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Saddle Point</h2>
                     <p>An interactive 3D visualization demonstrating saddle points and local minima in optimization landscapes.</p>
-                    <a href="marble/index.html" class="play-button">Play</a>
+                    <a href="marble/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Sliding Tiles</h2>
                     <p>A sliding puzzle where players rearrange scrambled image tiles to recreate the original picture</p>
-                    <a href="sliding/index.html" class="play-button">Play</a>
+                    <a href="sliding/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Color Cascade</h2>
                     <p>Flood the grid with color in this addictive puzzle game where strategy meets simplicity.</p>
-                    <a href="color/index.html" class="play-button">Play</a>
+                    <a href="color/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>DVD Gravity</h2>
                     <p>Guide a colorful DVD logo through a cosmic dance of bounces and gravity wells, scoring points as it kisses the corners of your screen.</p>
-                    <a href="dvd/index.html" class="play-button">Play</a>
+                    <a href="dvd/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Cosmic Sim</h2>
                     <p>Explore a dynamic cosmic simulation where particle densities shape a vibrant, evolving universe.</p>
-                    <a href="particle/index.html" class="play-button">Play</a>
+                    <a href="particle/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Neon</h2>
                     <p>Visualize and interact with different neural network architectures as you watch activations propagate through their intricate layers.</p>
-                    <a href="neon/index.html" class="play-button">Play</a>
+                    <a href="neon/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Intervals</h2>
                     <p>Explore musical intervals in this interactive game that tests your ear and music theory knowledge.</p>
-                    <a href="intervals/index.html" class="play-button">Play</a>
+                    <a href="intervals/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>AI News</h2>
                     <p>A news reader that aggregates and displays the latest news articles from selected RSS feeds.</p>
-                    <a href="rss/index.html" class="play-button">Play</a>
+                    <a href="rss/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Automata</h2>
                     <p>An interactive cellular automaton simulation where you can create and observe evolving patterns on a dynamic grid.</p>
-                    <a href="automata/index.html" class="play-button">Play</a>
+                    <a href="automata/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Map</h2>
                     <p>Interactive world map visualizing global population data with color-coded countries and hover-over information.</p>
-                    <a href="map/index.html" class="play-button">Play</a>
+                    <a href="map/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Whiteboard</h2>
                     <p>A modern, interactive whiteboard with drawing tools, camera integration, and cloud saving capabilities.</p>
-                    <a href="whiteboard/index.html" class="play-button">Play</a>
+                    <a href="whiteboard/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Jokes</h2>
                     <p>A simple web app that displays a new joke every time you visit.</p>
-                    <a href="jokes/index.html" class="play-button">Play</a>
+                    <a href="jokes/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Fractals</h2>
                     <p>Explore mesmerizing fractal patterns with this interactive app, featuring the Mandelbrot set, Julia set, and Sierpinski triangle.</p>
-                    <a href="fractal/index.html" class="play-button">Play</a>
+                    <a href="fractal/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Slither</h2>
                     <p>Slither through a vibrant world, grow your snake, and outmaneuver opponents in this multiplayer game.</p>
-                    <a href="slither/index.html" class="play-button">Play</a>
+                    <a href="slither/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Slots</h2>
                     <p>Spin the reels in this colorful Emoji Slot Machine and aim for the cherry jackpot!</p>
-                    <a href="slots/index.html" class="play-button">Play</a>
+                    <a href="slots/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Shaders</h2>
                     <p>Explore a collection of mesmerizing WebGL shaders, from rippling waves to psychedelic vortexes.</p>
-                    <a href="shader/index.html" class="play-button">Play</a>
+                    <a href="shader/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Teapot</h2>
                     <p>Utah Teapot WebGL Demo: Explore the iconic 3D model that revolutionized computer graphics.</p>
-                    <a href="vertex/index.html" class="play-button">Play</a>
+                    <a href="vertex/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Ray Trace</h2>
                     <p>A 3D Donut Ray Tracer.</p>
-                    <a href="raytrace/index.html" class="play-button">Play</a>
+                    <a href="raytrace/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Red Black Tree</h2>
                     <p>Explore self-balancing binary search trees with real-time insertion and deletion operations.</p>
-                    <a href="rbtree/index.html" class="play-button">Play</a>
+                    <a href="rbtree/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Nonogram</h2>
                     <p>Solve colorful 10x10 nonogram puzzles to reveal hidden emoji pictures in this fun and challenging logic game.</p>
-                    <a href="nonogram/index.html" class="play-button">Play</a>
+                    <a href="nonogram/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>MD5 Cracker</h2>
                     <p>Demonstrate the power of parallel computing by cracking MD5 hashes with and without GPU.</p>
-                    <a href="password/index.html" class="play-button">Play</a>
+                    <a href="password/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Neural Bridge Builder</h2>
                     <p>Connect Large Language Models with Knowledge Graphs to create unified AI systems in this educational puzzle game.</p>
-                    <a href="neural-bridge/index.html" class="play-button">Play</a>
+                    <a href="neural-bridge/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Sorting Visualizer</h2>
                     <p>Watch and compare how different sorting algorithms organize data in real-time, with step-by-step visualization.</p>
-                    <a href="sort/index.html" class="play-button">Play</a>
+                    <a href="sort/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>3D Automata</h2>
                     <p>A 3D cellular automaton that grows organic crystalline structures, with cells aging from green to brown.</p>
-                    <a href="3dlife/index.html" class="play-button">Play</a>
+                    <a href="3dlife/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Wave Function Collapse</h2>
                     <p>Interactive maze generation using quantum-inspired algorithm with real-time entropy visualization.</p>
-                    <a href="wfc/index.html" class="play-button">Play</a>
+                    <a href="wfc/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Flowspace</h2>
                     <p>An interactive fluid simulation that dances with sound and motion.</p>
-                    <a href="flowspace/index.html" class="play-button">Play</a>
+                    <a href="flowspace/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Racer</h2>
                     <p>Race against time in this high-speed circuit challenge.</p>
-                    <a href="racer/index.html" class="play-button">Play</a>
+                    <a href="racer/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Lunar Lander</h2>
                     <p>Navigate your spacecraft to a safe landing on the moon while managing fuel and avoiding crashes!</p>
-                    <a href="lunarlander/index.html" class="play-button">Play</a>
+                    <a href="lunarlander/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Swipe2Chat</h2>
                     <p>Chat with your friends, tinder style.</p>
-                    <a href="swipe2chat/index.html" class="play-button">Play</a>
+                    <a href="swipe2chat/index.html" class="play-button">Open</a>
                 </div>
         </section>
 
@@ -214,57 +214,57 @@
                 <div class="game-box">
                     <h2>MinGPT</h2>
                     <p>A mini language model trained on Shakespeare, powered by TensorFlow.js in your browser.</p>
-                    <a href="gpt/index.html" class="play-button">View Demo →</a>
+                    <a href="gpt/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Stick Balancing</h2>
                     <p>Watch as an AI agent learns to balance a stick using reinforcement learning.</p>
-                    <a href="stick/index.html" class="play-button">View Demo →</a>
+                    <a href="stick/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>RL Snake</h2>
                     <p>An AI-powered Snake game using reinforcement learning with real-time visualization.</p>
-                    <a href="snake/index.html" class="play-button">View Demo →</a>
+                    <a href="snake/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Tic-Tac-Toe</h2>
                     <p>An interactive Tic-Tac-Toe game powered by Deep Q-Learning.</p>
-                    <a href="tictactoe/index.html" class="play-button">View Demo →</a>
+                    <a href="tictactoe/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Breakout</h2>
                     <p>A Breakout game powered by a Deep Q-Network (DQN) agent.</p>
-                    <a href="breakout/index.html" class="play-button">View Demo →</a>
+                    <a href="breakout/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Robot Arm</h2>
                     <p>Train a robotic arm using deep reinforcement learning.</p>
-                    <a href="robotarm/index.html" class="play-button">View Demo →</a>
+                    <a href="robotarm/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Pong</h2>
                     <p>A self-learning Pong AI that trains through neural networks.</p>
-                    <a href="pong/index.html" class="play-button">View Demo →</a>
+                    <a href="pong/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Air Hockey</h2>
                     <p>An AI air hockey opponent that learns through self-play using RL.</p>
-                    <a href="airhockey/index.html" class="play-button">View Demo →</a>
+                    <a href="airhockey/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Streaming Learning</h2>
                     <p>A TFJS port of the new Streaming Q-learning algorithm with eligibility traces.</p>
-                    <a href="streaming-rl/index.html" class="play-button">View Demo →</a>
+                    <a href="streaming-rl/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>XGBoost</h2>
                     <p>Interactive Titanic survival predictor using gradient boosting, with data visualizations.</p>
-                    <a href="xgboost/index.html" class="play-button">View Demo →</a>
+                    <a href="xgboost/index.html" class="play-button">Open</a>
                 </div>
                 <div class="game-box">
                     <h2>Growing Emoji</h2>
                     <p>Experience a dynamic Neural Cellular Automata model of an emoji.</p>
-                    <a href="emojimata/index.html" class="play-button">View Demo →</a>
+                    <a href="emojimata/index.html" class="play-button">Open</a>
                 </div>
             </div>
         </section>
