--- a/snake/index.html
+++ b/snake/index.html
@@ -17,6 +17,7 @@
     <div id="controls">
         <button id="toggleMode">Switch to Testing</button>
         <span id="modeStatus" style="margin-left: 10px;">Mode: Training</span>
+        <a href="index-pretrained.html" style="margin-left: 20px;">View Pre-trained Demo</a>
     </div>
     <div id="stats">
         <p>Episode: <span id="episode">0</span></p>
