--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
+                    <h2>Squid OS</h2>
+                    <p>A mini-game collection based on the popular series.</p>
+                    <a href="squid_os/index.html" class="play-button">Open</a>
+                </div>
+                <div class="game-box">
                     <h2>Echoes of Consciousness</h2>
                     <p>A beautiful, interactive e-book exploring AI consciousness, transformer architecture, and the connection between human and artificial minds.</p>
                     <a href="echoes-of-consciousness/index.html" class="play-button">Open</a>
