--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
+                    <h2>Claude Opus Compositions</h2>
+                    <p>Original musical compositions created by AI, featuring interactive sheet music and synth playback in a classical manuscript style.</p>
+                    <a href="music/index.html" class="play-button">Open</a>
+                </div>
+                <div class="game-box">
                     <h2>3D Tree Simulation</h2>
                     <p>Realistic 3D tree simulation with natural wind animations, dynamic height/fullness controls, and procedural generation using WebGL.</p>
                     <a href="trees/index.html" class="play-button">Open</a>
