Add minimalist Connect Four app with three-tier AI

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
+                    <h2>Connect Four</h2>
+                    <p>A minimalist Connect Four duel with graceful animations and a three-tier AI.</p>
+                    <a href="connect4/index.html" class="play-button">Open</a>
+                </div>
+                <div class="game-box">
                     <h2>Avatar Lip Sync</h2>
                     <p>Real-time hedgehog avatar with text-to-speech lip synchronization using VRM models, Web Speech API, and character-to-viseme mapping.</p>
                     <a href="avatar/index.html" class="play-button">Open</a>
