--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="#about">About</a>
             <a href="#ai-apps">Apps</a>
             <a href="#ai-experiments">Experiments</a>
-            <a href="https://github.com/elichen/elichen.github.io/tree/main/essays" target="_blank">Essays</a>
+            <a href="https://elichen.github.io/essays/" target="_blank">Essays</a>
             <a href="https://github.com/elichen" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/elichen" target="_blank">LinkedIn</a>
             <a href="https://apps.apple.com/us/developer/eli-chen/id307932247" target="_blank">iOS</a>
