--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
-                    <h2>Neural Dreams</h2>
-                    <p>Transform your photos with AI-powered Deep Dream effects using TensorFlow.js and MobileNet. Gradient ascent generates psychedelic patterns in real-time, all in your browser.</p>
-                    <a href="deepdream/index.html" class="play-button">Open</a>
-                </div>
-                <div class="game-box">
                     <h2>Pop the Balloons</h2>
                     <p>Real-time hand tracking game using TensorFlow.js pose estimation. Pop balloons with your hands - right hand for red, left hand for blue. Supports multiple players!</p>
                     <a href="balloons/index.html" class="play-button">Open</a>
@@ -258,6 +253,11 @@
         <section id="ai-experiments">
             <h2 class="section-header">Experiments on AI</h2>
             <div class="projects-grid">
+                <div class="game-box">
+                    <h2>Neural Dreams</h2>
+                    <p>Deep Dream visualization using gradient ascent on MobileNet embeddings. Maximizes intermediate layer activations to generate psychedelic patterns.</p>
+                    <a href="deepdream/index.html" class="play-button">Open</a>
+                </div>
                 <div class="game-box">
                     <h2>MinGPT</h2>
                     <p>A mini language model trained on Shakespeare, powered by TensorFlow.js in your browser.</p>
