Add Unicorn Survival game

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
+                    <h2>Unicorn Survival</h2>
+                    <p>Guide a magical unicorn through a modern world, collecting food and resources to survive. Build shelters and storage using WASD controls in this charming survival adventure!</p>
+                    <a href="unicorn-survival/index.html" class="play-button">Open</a>
+                </div>
+                <div class="game-box">
                     <h2>Pop the Balloons</h2>
                     <p>Real-time hand tracking game using TensorFlow.js pose estimation. Pop balloons with your hands - right hand for red, left hand for blue. Supports multiple players!</p>
                     <a href="balloons/index.html" class="play-button">Open</a>
