Add simplified Family Comic Maker with intuitive drag-and-drop UI
- Clean 2-column layout with visual character cards
- Click to add characters, drag to move them
- Inline text editing for speech bubbles
- No API keys needed - runs entirely client-side
- Apple-inspired minimal design
- Smart defaults and progressive disclosure
- Visual panel selector (1, 2h, 2v, 4 panels)
- Export comics as PNG images

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
+                    <h2>Family Comic Maker</h2>
+                    <p>Create fun stick figure comic panels with pre-made poses, speech bubbles, and drawing tools. Export your family comics as images - no API keys needed!</p>
+                    <a href="comic-maker/index.html" class="play-button">Open</a>
+                </div>
+                <div class="game-box">
                     <h2>Unicorn Survival</h2>
                     <p>Guide a magical unicorn through a modern world, collecting food and resources to survive. Build shelters and storage using WASD controls in this charming survival adventure!</p>
                     <a href="unicorn-survival/index.html" class="play-button">Open</a>
