--- a/deepdream/index.html
+++ b/deepdream/index.html
@@ -100,6 +100,7 @@
         <footer>
             <p>Powered by TensorFlow.js & InceptionV3</p>
             <p class="note">All processing happens in your browser - no data is uploaded</p>
+            <p class="note">Learn more in the <a href="https://www.tensorflow.org/tutorials/generative/deepdream" target="_blank" rel="noopener noreferrer">TensorFlow DeepDream tutorial</a>.</p>
         </footer>
     </div>
 
