Add Mountain Car to experiments section

--- a/index.html
+++ b/index.html
@@ -333,6 +333,11 @@
                     <p>Two instances of Claude (Sonnet 4.5 & Opus 4.1) converse autonomously, exploring consciousness, reality, and the nature of AI. Watch them agree, disagree, and discover surprising philosophical depths.</p>
                     <a href="claude2claude/index.html" class="play-button">Open</a>
                 </div>
+                <div class="game-box">
+                    <h2>Mountain Car</h2>
+                    <p>Watch a pre-trained DQN agent solve the classic Mountain Car problem. Trained with Stable Baselines3 in Python, converted to run in your browser with TensorFlow.js.</p>
+                    <a href="mtncar/index.html" class="play-button">Open</a>
+                </div>
             </div>
         </section>
     </div>
