--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <h2 class="section-header">Built with AI</h2>
             <div class="projects-grid">
                 <div class="game-box">
+                    <h2>Gemini Dungeon</h2>
+                    <p>A procedural raycasting engine written in vanilla JS. Features maze generation, dynamic lighting, and retro 3D graphics.</p>
+                    <a href="procedural-dungeon/index.html" class="play-button">Open</a>
+                </div>
+                <div class="game-box">
                     <h2>Turing Pattern Generator</h2>
                     <p>Interactive reaction-diffusion simulation using the Gray-Scott model. Click to seed reaction points and watch as self-organizing patterns emerge and reach equilibrium.</p>
                     <a href="turing-patterns/index.html" class="play-button">Open</a>
