--- a/comic-maker/index.html
+++ b/comic-maker/index.html
@@ -1,139 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comic Maker</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stick Figure Comic Maker</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="app">
-        <!-- Header -->
-        <header>
-            <h1>Comic Maker</h1>
-            <div class="header-actions">
-                <button id="undoBtn" class="icon-btn" title="Undo">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M3 10h10a5 5 0 0 1 0 10H3"/>
-                        <path d="M3 10l5-5M3 10l5 5"/>
-                    </svg>
-                </button>
-                <button id="clearBtn" class="icon-btn" title="Clear">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M3 6h18M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2M19 6l-1 14a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2L5 6"/>
-                    </svg>
-                </button>
-                <button id="saveBtn" class="primary-btn">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3"/>
-                    </svg>
-                    Save
-                </button>
-            </div>
-        </header>
+    <div id="app">
+        <div id="toolbar" role="toolbar" aria-label="Tools">
+            <button class="tool-btn active" data-tool="select" title="Select / Move (V or Esc)">Move</button>
+            <button class="tool-btn" data-tool="man" title="Add standing man (M or P)">Man</button>
+            <button class="tool-btn" data-tool="woman" title="Add standing woman (W)">Woman</button>
+            <button class="tool-btn" data-tool="seated-man" title="Add seated man at desk (S)">Seated M</button>
+            <button class="tool-btn" data-tool="seated-woman" title="Add seated woman at desk (Shift+S)">Seated F</button>
+            <button class="tool-btn" data-tool="bubble" title="Add speech bubble (B)">Bubble</button>
+            <button class="tool-btn" data-tool="text" title="Add free text (T)">Text</button>
+            <div class="spacer" aria-hidden="true"></div>
+            <button id="undoBtn" class="action-btn" title="Undo (⌘/Ctrl+Z)">Undo</button>
+            <button id="clearBtn" class="action-btn" title="Clear all">Clear</button>
+            <button id="saveBtn" class="action-btn primary" title="Save PNG">Save</button>
+        </div>
 
-        <main>
-            <!-- Sidebar -->
-            <aside class="sidebar">
-                <!-- Layout -->
-                <section class="section">
-                    <div class="layout-grid">
-                        <button class="layout-btn active" data-layout="1" title="Single panel">
-                            <div class="layout-icon l1"></div>
-                        </button>
-                        <button class="layout-btn" data-layout="2h" title="Two panels">
-                            <div class="layout-icon l2h"></div>
-                        </button>
-                        <button class="layout-btn" data-layout="2v" title="Two panels vertical">
-                            <div class="layout-icon l2v"></div>
-                        </button>
-                        <button class="layout-btn" data-layout="4" title="Four panels">
-                            <div class="layout-icon l4"></div>
-                        </button>
-                    </div>
-                </section>
-
-                <!-- Characters -->
-                <section class="section">
-                    <h2>Characters</h2>
-                    <div class="char-grid">
-                        <button class="char-btn" data-pose="standing">
-                            <canvas class="char-preview" width="50" height="70"></canvas>
-                            <span>Stand</span>
-                        </button>
-                        <button class="char-btn" data-pose="walking">
-                            <canvas class="char-preview" width="50" height="70"></canvas>
-                            <span>Walk</span>
-                        </button>
-                        <button class="char-btn" data-pose="waving">
-                            <canvas class="char-preview" width="50" height="70"></canvas>
-                            <span>Wave</span>
-                        </button>
-                        <button class="char-btn" data-pose="happy">
-                            <canvas class="char-preview" width="50" height="70"></canvas>
-                            <span>Happy</span>
-                        </button>
-                        <button class="char-btn" data-pose="pointing">
-                            <canvas class="char-preview" width="50" height="70"></canvas>
-                            <span>Point</span>
-                        </button>
-                        <button class="char-btn" data-pose="sitting">
-                            <canvas class="char-preview" width="50" height="70"></canvas>
-                            <span>Sit</span>
-                        </button>
-                    </div>
-                </section>
-
-                <!-- Bubbles -->
-                <section class="section">
-                    <h2>Speech</h2>
-                    <div class="bubble-grid">
-                        <button class="bubble-btn" data-type="speech">
-                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                                <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/>
-                            </svg>
-                            <span>Speech</span>
-                        </button>
-                        <button class="bubble-btn" data-type="thought">
-                            <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                                <circle cx="12" cy="10" r="7"/>
-                                <circle cx="8" cy="19" r="2"/>
-                                <circle cx="5" cy="22" r="1"/>
-                            </svg>
-                            <span>Thought</span>
-                        </button>
-                    </div>
-                </section>
-
-                <div class="tip">
-                    Click character to add, drag to move, double-click bubble to edit
-                </div>
-            </aside>
-
-            <!-- Canvas -->
-            <div class="canvas-container">
-                <div id="comic" class="comic layout-1">
-                    <div class="panel active" data-index="0">
-                        <canvas></canvas>
-                    </div>
-                </div>
-            </div>
-        </main>
-    </div>
-
-    <!-- Text Editor Popup -->
-    <div id="textEditor" class="text-editor hidden">
-        <textarea id="textInput" placeholder="Type here..." rows="2"></textarea>
-        <div class="editor-actions">
-            <button id="cancelEdit" class="cancel-btn">Cancel</button>
-            <button id="saveEdit" class="save-btn">Done</button>
+        <div id="canvasWrap">
+            <canvas id="comicCanvas" aria-label="Comic canvas"></canvas>
         </div>
     </div>
 
-    <!-- Export Canvas -->
-    <canvas id="exportCanvas" style="display:none;"></canvas>
+    <div id="textEditor" class="editor hidden" role="dialog" aria-modal="true">
+        <textarea id="textInput" rows="3" placeholder="Type…" spellcheck="false"></textarea>
+        <div class="editor-actions">
+            <button id="cancelEdit" class="action-btn">Cancel</button>
+            <button id="saveEdit" class="action-btn primary">Done</button>
+        </div>
+    </div>
 
-    <script src="stick-figures.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
