Show max score instead of food eaten

--- a/snake/index.html
+++ b/snake/index.html
@@ -30,8 +30,8 @@
                 <span class="stat-label">Episode</span>
             </div>
             <div class="stat-item">
-                <span class="stat-value" id="foodEaten">0</span>
-                <span class="stat-label">Food Eaten</span>
+                <span class="stat-value" id="maxScore">0</span>
+                <span class="stat-label">Max Score</span>
             </div>
         </div>
 
